spanish info update

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | UX Developer egresada de Laboratoria en Lima, Perú.</title>
+    <title>Annia J. Flores | Front-end Developer egresada de Laboratoria en Lima, Perú.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://itsandromeda.github.io/Portfolio/public/index.html">
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
-    <meta property="og:title" content="Annia J. Flores, UX Developer">
+    <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portafolio">
-    <meta property="og:description" content="UX Developer egresada de Laboratoria en Lima, Perú.">
+    <meta property="og:description" content="Front-end Developer egresada de Laboratoria en Lima, Perú.">
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
-    <meta name="twitter:title" content="Annia J. Flores, UX Developer">
-    <meta name="twitter:description" content="UX Developer egresada de Laboratoria en Lima, Perú.">
+    <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
+    <meta name="twitter:description" content="Front-end Developer egresada de Laboratoria en Lima, Perú.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index.html">
     <!-- Font Awesome -->
@@ -32,7 +32,7 @@
 <body>
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
-            <span class="nav-text">ANNIA J. FLORES | UX DEVELOPER JR.</span>
+            <span class="nav-text">ANNIA J. FLORES | FRONT-END DEVELOPER</span>
             <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="Mi correo electrónico"><i class="fa fa-envelope-o"></i> ¡ESCRÍBEME! :)</a>
         </div>
     </nav>
@@ -60,7 +60,7 @@
                     <div class="home__logo">
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
-                    <p class="hidden-xs">UX DEVELOPER, LIMA - PERÚ</p>
+                    <p class="hidden-xs">FRONT-END DEVELOPER, LIMA - PERÚ</p>
                     <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_es.pdf">
                         <button class="btn home__button" type="submit">Descargar CV</button>
                     </form>
@@ -74,17 +74,17 @@
         <section id="work" class="small-grid">
             <div class="container-fluid">
                 <h2>TRABAJOS RECIENTES</h2>
-                <p>Estos son solo algunos de los trabajos que desarrollé en Laboratoria, puedes ver más en mi perfil de <a href="https://github.com/itsandromeda" target="_blank">GitHub</a>.</p>
+                <p>Estos son solo algunos de mis trabajos desarrollados a la fecha, puedes ver más en mi perfil de <a href="https://github.com/itsandromeda" target="_blank">GitHub</a>.</p>
                 <div class="row">
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
-                        <h3>WANDERLUST</h3>
-                        <p>Plataforma desarrollada en 48 horas, la cual te permite crear pinboards con fotos y videos. Ganadora de un reconocimiento en Laboratoria.</p>
-                        <button type="button" class="btn" data-toggle="modal" data-target="#wandelust-modal">HTML5, CSS3 &amp; JavaScript</button>
+                        <h3>SHOES STORE</h3>
+                        <p>Shopping cart realizado con React, Redux y un fake Rest API.</p>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#wandelust-modal">ECMAScript 6, React &amp; Redux</button>
                     </div>
                     <div class="small-grid__box--light col-xs-12 col-md-6">
-                        <h3>PINTEREST</h3>
-                        <p>Recreación de la plataforma original trayendo datos del API de la misma.</p>
-                        <button type="button" class="btn" data-toggle="modal" data-target="#pinterest-modal">jQuery, Pinterest API, GULP &amp; SASS</button>
+                        <h3>RETO OESCHLE</h3>
+                        <p>¿Cómo podríamos crear una experiencia en la que sus clientas puedan descubrir looks y sentirse seguras de que estas combinaciones van con ellas?</p>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#pinterest-modal">Figma, Design Thinking</button>
                     </div>
                 </div>
                 <div class="row">
@@ -96,7 +96,7 @@
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>FAB</h3>
                         <p>Réplica responsive del sitio e-commerce de FAB, utilizando el framework Foundation.</p>
-                        <button type="button" class="btn" data-toggle="modal" data-target="#fab-modal">Foundation, HTML5, CSS3</button>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#fab-modal">Foundation, HTML5 &amp; CSS3</button>
                     </div>
                 </div>
             </div>
@@ -108,60 +108,29 @@
                         <div class="modal-header row">
                             <div class="col-md-12">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">WANDERLUST</h3>
+                                <h3 class="modal-title">SHOES STORE</h3>
                             </div>
                         </div>
                         <div class="modal-body row">
                             <div class="col-md-4 col-xs-12">
-                                <h4>Cliente</h4>
-                                <p>Laboratoria</p>
                                 <h4>Mi función</h4>
-                                <p>Crear el concepto y diseño de la plataforma. Desarrollar la página de ingreso de usuario y refactorizar código de JS.</p>
+                                <p>Crear una lista de productos que se puedan filtrar y agregar al shopping cart, en la vista del checkout hacer que estos se pueden modificar y eliminar.</p>
                                 <h4>Tecnologías</h4>
                                 <ul>
-                                    <li>Vanilla JavaScript</li>
+                                    <li>React JS</li>
+                                    <li>Redux</li>
                                     <li>CSS3</li>
-                                    <li>HTML5</li>
-                                    <li>Git</li>
-                                    <li>GitHub</li>
+                                    <li>ECMAScript 6</li>
                                 </ul>
-                                <h4>Reconocimientos</h4>
-                                <p>Mención especial por innovación tech en Laboratoria.</p>
                             </div>
                             <div class="col-md-8 col-xs-12">
                                 <div class="col-md-12">
-                                    <p>Crear un proyecto en 48 horas utilizando eventos de JavaScript.</p>
-                                    <p>Requerimientos:</p>
-                                    <ol>
-                                        <li>Aplicar dos eventos vistos en clase</li>
-                                        <li>Aplicar dos eventos nuevos</li>
-                                        <li>Usar callbacks</li>
-                                    </ol>
-                                </div>
-                                <div class="col-md-12">
                                     <h4>PROCESO</h4>
-                                    <h5>01. Organización</h5>
-                                    <p>Este fue un proyecto desarrollado en parejas así que para poder cumplir con la meta final mantener una buena organización fue clave. Nos indicamos tareas de acuerdo a nuestro nivel de agilidad para ir así trabajando a la par sin perder un minuto de nuestro tiempo. Utilizamos Trello para tener en orden las tareas a trabajar y nos pusimos tiempos para poder revisar y hacer sugerencias a nuestro avance.</p>
-                                    <h5>02. Investigación</h5>
-                                    <p>Generé esta propuesta debido a mi búsqueda por una red social que se enfoque en compartir experiencias de viajeros en línea. Hice un boceto inicial en lápiz y papel en base a la estructura que tenía en mente y así pudimos darle inicio al proceso de desarrollo.</p>
-                                    <h5>03. Desarrollo</h5>
-                                    <p>Los dos eventos vistos en clase que aplicamos fueron:</p>
-                                    <ol>
-                                        <li>OnmouseOver: se produce cuando el puntero del mouse se mueve a través de la barra de navegación, haciendo una transición de color y tamaño en el elemento sujeto al evento.</li>
-                                        <li>OnmouseOut: Este evento se produce cuando el puntero del mouse se mueve fuera del área de uno de los elementos de la barra de navegación, alterando el estilo de borde y color de fondo.</li>
-                                    </ol>
-                                    <p>Los eventos no vistos en clase utilizados en el proyecto fueron:</p>
-                                    <ol>
-                                        <li>OnmouseMove: El evento se produce cuando el puntero del mouse se mueve cerca a las coordenadas del menu desplegable ubicado a la derecha del homepage. Al ocurrir el evento el menu se despliega y muestra las opciones de los lugares en tendencia para road trips en Wanderlust.</li>
-                                        <li>DragOver: El evento de extracción se produce en la sección del pinboard, puedes seleccionar un archivo mp4 o una imagen y arrastrar el elemento hacia el contenedor.</li>
-                                        <li>Drop: El evento sucede cuando los datos arrastrados desde tu ordenador son soltados en el contenedor armando así poco a poco tu pinboard.</li>
-                                    </ol>
-                                    <strong><p class="text-center">Para ingresar a la plataforma usar el correo itsandromeda@gmail.com y contraseña 321</p></strong>
-
+                                    <p>El proyecto fue parte de mi aprendizaje de React &amp; Redux, utilicé un fake Rest API para retribuir la lista de productos.</p>
+                                    <p>Esta aplicación está organizada de tal manera en que los components, actions y reducers se encuentran distribuidos en sus respectivas carpetas en el árbol, opté por esta organización dado que es pequeña.</p>
                                 </div>
                                 <div class="col-md-12 modal__btns">
-                                    <a class="modal-btn" href="https://github.com/itsandromeda/Wanderlust-Proyecto-X" target="_blank">Código</a>
-                                    <a class="modal-btn" href="https://itsandromeda.github.io/Wanderlust-Proyecto-X/" target="_blank">Demo</a>
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Shoes-Store" target="_blank">Código &amp; Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -176,49 +145,26 @@
                         <div class="modal-header row">
                             <div class="col-md-12">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">PINTEREST</h3>
+                                <h3 class="modal-title">RETO OESCHLE</h3>
                             </div>
                         </div>
                         <div class="modal-body row">
                             <div class="col-md-4 col-xs-12">
                                 <h4>Cliente</h4>
-                                <p>Laboratoria</p>
+                                <p>Oeschle</p>
                                 <h4>Mi función</h4>
-                                <p>Automatizar las tareas de desarrollo con gulp y trabajar con SASS para generar los estilos.</p>
-                                <h4>Tecnologías</h4>
+                                <p>Research, entrevistas, desarrollo de customer journey map, wireframes, prototipado.</p>
+                                <h4>Metodologías</h4>
                                 <ul>
-                                    <li>JavaScript</li>
-                                    <li>jQuery</li>
-                                    <li>Gulp</li>
-                                    <li>SASS</li>
-                                    <li>BEM</li>
-                                    <li>HTML5</li>
-                                    <li>Git</li>
-                                    <li>GitHub</li>
-                                    <li>Heroku</li>
-                                    <li>Pinterest API</li>
+                                    <li>Design Thinking</li>
                                 </ul>
                             </div>
                             <div class="col-md-8 col-xs-12">
                                 <div class="col-md-12">
-                                    <p>Recrear un board específico siguiendo el diseño original.</p>
-                                    <p>Requerimientos:</p>
-                                    <ol>
-                                        <li>SASS, con alguna notación modular(BEM, OCCSS, etc.)</li>
-                                        <li>Gulp</li>
-                                        <li>Componentes</li>
-                                    </ol>
-                                </div>
-                                <div class="col-md-12">
-                                    <h4>PROCESO</h4>
-                                    <h5>01. Organización</h5>
-                                    <p>El proyecto lo realicé con una compañera y utilizamos Trello para mantenernos al tanto de nuestro avance.</p>
-                                    <h5>02. Desarrollo</h5>
-                                    <p>Cada componente tiene un archivo de SCSS por motivos de organización y fácil edición e hice uso de la metodología BEM para estructurar el CSS.</p>
+                                    <p>Este fue un reto presentado por Oeschle para mi clase de UX Design en Laboratoria, este fue escogido y desarrollado en parejas. Nosotras pudimos documentar más a fondo nuestro proceso en el siguiente post de <a href="https://medium.com/@gchaucae/de-la-idea-al-producto-un-proceso-de-ux-1d03d137b87f" target="_blank">Medium</a>.</p>
                                 </div>
                                 <div class="col-md-12 modal__btns">
-                                    <a class="modal-btn" href="https://github.com/itsandromeda/Pinterest" target="_blank">Código</a>
-                                    <a class="modal-btn" href="https://pinterest-laboratoria.herokuapp.com/" target="_blank">Demo</a>
+                                    <a class="modal-btn" href="https://www.figma.com/proto/PBt34NagBfJmhGnGZZA2ZVJw/Oe-Moda?scaling=contain&node-id=87%3A35&redirected=1" target="_blank">Prototipo</a>
                                 </div>
                             </div>
                         </div>
@@ -400,17 +346,19 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                <p>¡Hola! Mi nombre es Annia, soy una <em>UX Developer Jr.</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
+                                <p>¡Hola! Mi nombre es Annia, soy una <em>Front-end Developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
                                 <p>En la actualidad busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con el diseño y la tecnología. Soy una persona súper apasionada y comprometida con las metas que me trazo y son algunas de las cosas que me caracterizan, pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
                                 <p>Mi desempeño en Laboratoria fue bastante bueno, tengo la certeza de que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer y estoy segura que ese mindset me ayudó a obtener varios reconocimientos a lo largo del programa.</p>
 
                                 <h3>Intereses</h3>
                                 <p>Me interesan mucho el diseño UX, las causas sociales y el emprendimiento. Laboratoria sigue siendo un gran soporte en mi carrera ya que llevo cursos de especialización en UX Design en la actualidad.</p>
-                                <p>Muy aparte tengo gran afición por la música, diseño, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram, así que pueden ver más sobre las cosas que me inspiran ahí.</p>
+                                <p>Muy aparte tengo gran afición por la música, maquillaje SFX, diseño, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram, así que pueden ver más sobre las cosas que me inspiran ahí.</p>
                             </div>
                             <div class="about-content col-md-5">
                                 <h3>SKILL SET</h3>
                                 <ul>
+                                    <li>React JS</li>
+                                    <li>Redux</li>
                                     <li>Lean UX</li>
                                     <li>Design Thinking</li>
                                     <li>Scrum</li>
@@ -437,6 +385,7 @@
                                     <li>Git</li>
                                     <li>GitHub</li>
                                     <li>Gulp</li>
+                                    <li>Heroku</li>
                                 </ul>
                                 <h3>IDIOMAS</h3>
                                 <ul>
