--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Laboratoria graduate UX Developer in Lima, Peru.</title>
+    <title>Annia J. Flores | Laboratoria graduate Front-end Developer in Lima, Peru.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
-    <meta property="og:title" content="Annia J. Flores, UX Developer">
+    <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portfolio">
-    <meta property="og:description" content="Laboratoria graduate UX Developer in Lima, Peru.">
+    <meta property="og:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
-    <meta name="twitter:title" content="Annia J. Flores, UX Developer">
-    <meta name="twitter:description" content="Laboratoria graduate UX Developer in Lima, Peru.">
+    <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
+    <meta name="twitter:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <!-- Font Awesome -->
@@ -34,7 +34,7 @@
 <body>
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
-            <span class="nav-text">ANNIA J. FLORES | UX DEVELOPER JR.</span>
+            <span class="nav-text">ANNIA J. FLORES | FRONT-END DEVELOPER</span>
             <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="My email"><i class="fa fa-envelope-o"></i> SAY HELLO! :)</a>
         </div>
     </nav>
@@ -62,7 +62,7 @@
                     <div class="home__logo">
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
-                    <p class="hidden-xs">UX DEVELOPER, LIMA - PERU</p>
+                    <p class="hidden-xs">FRONT-END DEVELOPER, LIMA - PERU</p>
                     <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_eng.pdf">
                         <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
@@ -76,17 +76,17 @@
         <section id="work" class="small-grid">
             <div class="container-fluid">
                 <h2>RECENT PROJECTS</h2>
-                <p>These are just some of the projects I developed during my time in Laboratoria, you can see more on <a href="https://github.com/itsandromeda" target="_blank">my GitHub</a>.</p>
+                <p>These are just some of the projects I developed up to this date, you can see more on <a href="https://github.com/itsandromeda" target="_blank">my GitHub</a>.</p>
                 <div class="row">
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
-                        <h3>WANDERLUST</h3>
-                        <p>Web platform built in 48 hours from idea to product that allows you to create pinboards and upload video and image files. Winning project of innovation in Laboratoria's X Project challenge.</p>
-                        <button type="button" class="btn" data-toggle="modal" data-target="#wandelust-modal">HTML5, CSS3 &amp; JavaScript</button>
+                        <h3>SHOES STORE</h3>
+                        <p>Shopping cart developed with React, Redux &amp; a fake Rest API.</p>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#wandelust-modal">ECMAScript 6, React &amp; Redux</button>
                     </div>
                     <div class="small-grid__box--light col-xs-12 col-md-6">
-                        <h3>PINTEREST</h3>
-                        <p>Pinterest replica filled with data from a particular board accessed through the Pinterest API.</p>
-                        <button class="btn">jQuery, Pinterest API, GULP &amp; SASS</button>
+                        <h3>OESCHLE CHALLENGE</h3>
+                        <p>How could we create an experience in which their customers are able to discover looks and feel confident that these combinations go with them?</p>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#pinterest-modal">Figma, Design Thinking</button>
                     </div>
                 </div>
                 <div class="row">
@@ -110,60 +110,63 @@
                         <div class="modal-header row">
                             <div class="col-md-12">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">WANDERLUST</h3>
+                                <h3 class="modal-title">SHOES STORE</h3>
+                            </div>
+                        </div>
+                        <div class="modal-body row">
+                            <div class="col-md-4 col-xs-12">
+                                <h4>What I did</h4>
+                                <p>Create a list of products that can be filtered down and added to the shopping cart, on the checkout view these are able to be modified and eliminated from the cart.</p>
+                                <h4>Technologies</h4>
+                                <ul>
+                                    <li>React JS</li>
+                                    <li>Redux</li>
+                                    <li>CSS3</li>
+                                    <li>ECMAScript 6</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-8 col-xs-12">
+                                <div class="col-md-12">
+                                    <h4>PROCESS</h4>
+                                    <p>This project was a part of my React &amp; Redux learning path, I used a fake Rest API to retrieve my products list.</p>
+                                    <p>This app is organized in a way that the components, actions and reducers are distributed in their respective files on the tree, I used this organization method since the app is really small.</p>
+                                </div>
+                                <div class="col-md-12 modal__btns">
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Shoes-Store" target="_blank">Code &amp; Demo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="pinterest-modal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="container">
+                        <div class="modal-header row">
+                            <div class="col-md-12">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h3 class="modal-title">OESCHLE CHALLENGE</h3>
                             </div>
                         </div>
                         <div class="modal-body row">
                             <div class="col-md-4 col-xs-12">
                                 <h4>Client</h4>
-                                <p>Laboratoria</p>
+                                <p>Oeschle</p>
                                 <h4>What I did</h4>
-                                <p>Create the concept and design for the platform. I developed the login site and refactored the JS code.</p>
-                                <h4>Technologies</h4>
+                                <p>Research, interviews, customer journey map, wireframes, prototype.</p>
+                                <h4>Methodologies</h4>
                                 <ul>
-                                    <li>Vanilla JavaScript</li>
-                                    <li>CSS3</li>
-                                    <li>HTML5</li>
-                                    <li>Git</li>
-                                    <li>GitHub</li>
+                                    <li>Design Thinking</li>
                                 </ul>
-                                <h4>Acknowledgements</h4>
-                                <p>Special Mention for Tech Innovation in Laboratoria.</p>
                             </div>
                             <div class="col-md-8 col-xs-12">
                                 <div class="col-md-12">
-                                    <p>This was based on the X Project, a Laboratoria challenge in which we'd have to come up with a concept for a project and write the code using JavaScript events we hadn't seen in class in 48 hours.</p>
-                                    <p>Requirements:</p>
-                                    <ol>
-                                        <li>Use two events that we had seen in class</li>
-                                        <li>Use two new events</li>
-                                        <li>Use callbacks</li>
-                                    </ol>
-                                </div>
-                                <div class="col-md-12">
-                                    <h4>PROCESS</h4>
-                                    <h5>01. Organization</h5>
-                                    <p>We developed this project in pairs so if we wanted to deliver on time we needed to have a great organization system. We indicated eachother's tasks based on our agility so we wouldn't waste any minute of our time. We used Trello to keep our tasks in order and we set up deadlines to check on our progress and make the changes we needed to make.</p>
-                                    <h5>02. Research</h5>
-                                    <p>I came up with this proposal on my search for a social network that focused on sharing travelers experiences online. I made a quick sketch on paper with the structure I had in mind so we could begin with the development process.</p>
-                                    <h5>03. Development</h5>
-                                    <p>The selected events we used that we saw in class were:</p>
-                                    <ol>
-                                        <li>OnmouseOver</li>
-                                        <li>OnmouseOut</li>
-                                    </ol>
-                                    <p>The events that we didn't see in class that we used were:</p>
-                                    <ol>
-                                        <li>OnmouseMove</li>
-                                        <li>DragOver</li>
-                                        <li>Drop</li>
-                                    </ol>
-                                    <strong><p class="text-center">To enter the platform please use the email itsandromeda@gmail.com and the password 321</p></strong>
-
+                                    <p>This was a challenge presented to us by Oeschle for my UX Design class in Laboratoria, we selected and worked on this project in pairs. We were able to document our progress from beginning to end on the following <a href="https://medium.com/@gchaucae/de-la-idea-al-producto-un-proceso-de-ux-1d03d137b87f" target="_blank">Medium post</a>.</p>
                                 </div>
                                 <div class="col-md-12 modal__btns">
-                                    <a class="modal-btn" href="https://github.com/itsandromeda/Wanderlust-Proyecto-X" target="_blank">Code</a>
-                                    <a class="modal-btn" href="https://itsandromeda.github.io/Wanderlust-Proyecto-X/" target="_blank">Demo</a>
+                                    <a class="modal-btn" href="https://www.figma.com/proto/PBt34NagBfJmhGnGZZA2ZVJw/Oe-Moda?scaling=contain&node-id=87%3A35&redirected=1" target="_blank">Prototype</a>
                                 </div>
                             </div>
                         </div>
@@ -229,17 +232,19 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                <p>Hi! My name is Annia, I'm a <em>UX developer Jr.</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
+                                <p>Hi! My name is Annia, I'm a <em>Front-end developer</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
                                 <p>I'm currently looking to become a part of a team of entrepreneurs and visionaries determined to change the world with design and technology. I'm a very passionate and commited person with the goals I set to myself and those are some of the things that characterize me, I believe I would fit in perfectly in a design-driven team that works with agile methodologies, since it's what I've been trained for in the past months.</p>
                                 <p>My performance in Laboratoria has been pretty good, I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to and I think this kind of mindset really helped me get through the program with a few acknowledgements.</p>
 
                                 <h3>Interests</h3>
                                 <p>I'm really interested in UX Design, social issues and entrepreneurship. Laboratoria is still a huge support in my career, I'm currently taking UX courses to better my knowledge in the field.</p>
-                                <p>Apart from that I have a huge appreciation for music, design, photography and one of the platforms I use to share some of my other hobbies is Instagram, so you can find more of the things that inspire me right there.</p>
+                                <p>Apart from that I have a huge appreciation for music, SFX makeup, design, photography and one of the platforms I use to share some of my other hobbies is Instagram, so you can find more of the things that inspire me right there.</p>
                             </div>
                             <div class="about-content col-md-5">
                                 <h3>SKILL SET</h3>
                                 <ul>
+                                    <li>React JS</li>
+                                    <li>Redux</li>
                                     <li>Lean UX</li>
                                     <li>Design Thinking</li>
                                     <li>Scrum</li>
@@ -252,7 +257,7 @@
                                     <li>Materialize</li>
                                     <li>Foundation</li>
                                     <li>npm (package manager)</li>
-                                    <li>HTTP JSON &amp; consumo de APIs</li>
+                                    <li>HTTP JSON &amp; API consumption</li>
                                 </ul>
                                 <br>
                                 <h3>TOOLS</h3>
@@ -266,10 +271,11 @@
                                     <li>Git</li>
                                     <li>GitHub</li>
                                     <li>Gulp</li>
+                                    <li>Heroku</li>
                                 </ul>
                                 <h3>LANGUAGES</h3>
                                 <ul>
-                                    <li>Español - Nativo</li>
+                                    <li>Spanish - Native</li>
                                     <li>English - Bilingual proficiency</li>
                                 </ul>
                             </div>
