--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -253,7 +253,7 @@
                         <div class="modal-body row">
                             <div class="col-md-4 col-xs-12">
                                 <h4>What I did</h4>
-                                <p>I DesignED a shoes shoe store simmulator following Dollskill's brand guidelines.</p>
+                                <p>I designed a shoes store simmulator following Dollskill's brand guidelines.</p>
                                 <p>I Created a list of products that could be filtered out and added to the shopping
                                     cart</p>
                                 <p>In the checkout view you can modify and eliminate items</p>
