--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Diseñadora, Front-end Developer.</title>
+    <title>Annia J. Flores | Diseñadora UX/UI</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
