--- a/public/index.html
+++ b/public/index.html
@@ -327,7 +327,7 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                    <p>Hola! Soy Annia, una diseñadora <em>multidiciplinaria</em> de Lima, Peru que se enfoca en el diseño UI/UX.</p>
+                                    <p>Hola! Soy Annia, una diseñadora <em>multidisciplinaria</em> de Lima, Peru que se enfoca en el diseño UI/UX.</p>
                                     <p>Mi camino hacia el UX/UI empezó en el 2017 luego de terminar un programa de Desarrollo Web en<a
                                             href="https://www.laboratoria.la/" target="_blank">Laboratoria.</a> Llevé cursos de Diseño Visual & User Experience luego del bootcamp ya que quería mejorar
                                       mi enfoque visual en cuanto a resolver problemas y mi alto interés en las personas.</p>
