--- a/public/index.html
+++ b/public/index.html
@@ -327,11 +327,11 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                    <p>Hola! Soy Annia, una diseñadora <em>multidisciplinaria</em> de Lima, Peru que se enfoca en el diseño UI/UX.</p>
+                                    <p>Hola! Soy Annia, una diseñadora <em>multidisciplinaria</em> de Lima, Perú que se enfoca en diseño UI/UX.</p>
                                     <p>Mi camino hacia el UX/UI empezó en el 2017 luego de terminar un programa de Desarrollo Web en<a
-                                            href="https://www.laboratoria.la/" target="_blank">Laboratoria.</a> Llevé cursos de Diseño Visual & User Experience luego del bootcamp ya que quería mejorar
-                                      mi enfoque visual en cuanto a resolver problemas y mi alto interés en las personas.</p>
-                                    <p>Busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con el diseño y la tecnología. pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
+                                            href="https://www.laboratoria.la/" target="_blank">Laboratoria.</a> Llevé cursos de Diseño Visual & User Experience luego del bootcamp ya que quería unificar
+                                      mi enfoque visual para resolver problemas y mi alto interés en las personas.</p>
+                                    <p>Busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con el diseño y la tecnología. Pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
     
                                     <h3>Intereses</h3>
                                     <p>Estoy muy interesada en el Diseño Visual, UX Research, causas sociales y emprendimiento.</p>
