--- a/public/index.html
+++ b/public/index.html
@@ -351,7 +351,7 @@
                                     <li>React JS &amp; Redux</li>
                                 </ul>
                                 <br>
-                                <h3>TOOLS</h3>
+                                <h3>HERRAMIENTAS</h3>
                                 <ul>
                                     <li>Sketch</li>
                                     <li>Adobe XD</li>
