--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                                 <button type="button" class="btn">Figma, Design Thinking</button>
                             </div>
                             <div class="small-grid__box--light col-xs-12 col-md-6" data-toggle="modal" data-target="#modal-2">
-                                <h3>REDISEÑO SITIO WEB DE AMIGOCLOUD</h3>
+                                <h3>REDISEÑO WEB DE AMIGOCLOUD</h3>
                                 <p>Mejorar el look &amp; feel del antiguo sitio web de AmigoCloud</p>
                                 <button type="button" class="btn">Adobe Illustrator, Adobe Photoshop, Figma</button>
                             </div>
@@ -149,7 +149,7 @@
                             <div class="modal-header row">
                                 <div class="col-md-12">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h3 class="modal-title">REDISEÑO DE SITIO WEB DE AMIGOCLOUD</h3>
+                                    <h3 class="modal-title">REDISEÑO WEB DE AMIGOCLOUD</h3>
                                 </div>
                             </div>
                             <div class="modal-body row">
