--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -79,8 +79,7 @@
             <div class="container-fluid">
                 <h2>RECENT PROJECTS</h2>
                 <p>To see more design work please checkout <a href="https://www.behance.net/itsandromeda"
-                        target="_blank">my Behance</a>. If you'd like to see my development work, check out <a
-                        href="https://www.github.com/itsandromeda" target="_blank">my GitHub.</a></p>
+                        target="_blank">my Behance</a>.</p>
                 <div class="row">
                     <div class="small-grid__box--dark col-xs-12 col-md-6" data-toggle="modal" data-target="#modal-1">
                         <h3>OESCHLE UX CASE</h3>
