--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,7 @@
             <div class="container-fluid">
                 <h2>TRABAJOS RECIENTES</h2>
                 <p>Para ver más de mis trabajos de diseño por favor mira <a href="https://www.behance.net/itsandromeda"
-                    target="_blank">mi Behance</a>. Si quisieras ver mi trabajo en desarrollo, mira <a
-                    href="https://www.github.com/itsandromeda" target="_blank">mi GitHub.</a></p>
+                    target="_blank">mi Behance</a>.
                     <div class="row">
                             <div class="small-grid__box--dark col-xs-12 col-md-6" data-toggle="modal" data-target="#modal-1">
                                 <h3>OESCHLE CASO UX</h3>
