Removing insta feed

--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -359,7 +359,7 @@
                                 <p>I'm really interested in Visual Design, UX Research, social issues and
                                     entrepreneurship.</p>
                                 <p>Apart from that I have a huge appreciation for music, SFX makeup, photography and one
-                                    of the platforms I use to share some of my other hobbies is <a href="https://www.instagram.com/heyannia/" target="_blank">Instagram</a>, so you can
+                                    of the platforms I use to share some of my other hobbies is <a href="https://www.instagram.com/annia.jpg/" target="_blank">Instagram</a>, so you can
                                     find more of the things that inspire me right there.</p>
                             </div>
                             <div class="about-content col-md-5">
@@ -396,14 +396,6 @@
                     </div>
                 </div>
                 <hr>
-                <div id="interests" class="row">
-                    <div class="insta-feed col-md-12">
-                        <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                        <iframe src="https://snapwidget.com/embed/410595" class="snapwidget-widget"
-                            allowTransparency="true" frameborder="0" scrolling="no"
-                            style="border:none; overflow:hidden; width:100%; "></iframe>
-                    </div>
-                </div>
             </div>
         </section>
         <header class="header-bot hidden-xs">
